deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v1
  namespace: canary-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      version: v1
  template:
    metadata:
      labels:
        app: hello
        version: v1
    spec:
      containers:
      - name: hello
        image: hashicorp/http-echo
        args:
        - "-text=Hello version 1"
        ports:
        - containerPort: 5678
