service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: canary-demo
spec:
  selector:
    app: hello
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
